--- a/style.css
+++ b/style.css
@@ -764,7 +764,7 @@ body {
         font-size: 12px;
     }
     .nav-list {
-        display: none;
+        /* display: none; */
         
     }
 
