--- a/contact.css
+++ b/contact.css
@@ -16,7 +16,8 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 10px 30px;
+    height: 73px;
+    padding: 0px 24px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -34,19 +35,19 @@ body {
 }
 
 .hotel-name {
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 700;
 }
 
 .hotel-location {
-    font-size: 14px;
+    font-size: 12px;
     opacity: 0.8;
 }
 
 .nav-list {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 22px;
 }
 
 .nav-link {
@@ -63,10 +64,11 @@ body {
 .inquire-btn {
     background-color: hsl(213, 28%, 17%);
     color: hsl(0, 0%, 100%);
-    padding: 10px 20px;
-    border-radius: 8px;
+    padding: 8px 16px;
+    border-radius: 7px;
     text-decoration: none;
     font-weight: 500;
+    font-size: 13px;
     transition: 0.3s;
 }
 
@@ -83,9 +85,7 @@ body {
 }
 
 @media (max-width: 900px) {
-    .navbar {
-        display: none;
-    }
+    
     .menu-button {
         display: block;
     }
@@ -319,6 +319,9 @@ body {
 @media (max-width: 480px) {
     .map-wrapper iframe {
         height: 300px;
+    }
+    .nav-list {
+        display: none;
     }
 }
 
