--- a/rooms.css
+++ b/rooms.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", "Segoe UI", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
-    color: hsl(215, 28%, 17%);
-    font-family: "Poppins", "Segoe UI", sans-serif;
-    background-color: hsl(37, 100%, 97%);
+    color: hsl(0, 0%, 100%);
+    font-family: 'Poppins', sans-serif;
+    background: hsl(34, 40%, 92%);
+    padding-top: 80px;
     margin: 0;
 }
 
@@ -19,9 +20,9 @@ body {
     padding: 10px 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.264);
     backdrop-filter: blur(6px);
 }
 
@@ -60,7 +61,7 @@ body {
 }
 
 .inquire-btn {
-    background-color: #1f2a37;
+    background-color: hsl(213, 28%, 17%);
     color: hsl(0, 0%, 100%);
     padding: 10px 20px;
     border-radius: 8px;
